--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /Bases de Datos/Corte 1/DB2_JDBC/Practica/Practica/nbproject/private/
 /Bases de Datos/Corte 1/DB2_JDBC/Practica/Practica/build/
 /Bases de Datos/Corte 1/DB2_JDBC/Practica/Practica/dist/
+/Compiladores e interpretes/Corte 1/Analizador/AnalizadorLexico/nbproject/private/
+/Compiladores e interpretes/Corte 1/Analizador/AnalizadorLexico/build/
+/Compiladores e interpretes/Corte 1/Analizador/Interprete/nbproject/private/
+/Compiladores e interpretes/Corte 1/Analizador/Interprete/build/
+/Compiladores e interpretes/Corte 1/Analizador/Interprete/dist/
